fixes card header line spacing

--- a/styles/rotating-card.css
+++ b/styles/rotating-card.css
@@ -73,6 +73,7 @@ p{
 
 h5{
     color: #E33C34;
+    line-height: 150%;
 }
 
 .metadata {
